# Rifts

./: .gitignore  CMakeLists.txt  README.md  source.diff
Stubs/: 6R49.rsg  BackLightCtrl.h  BatteryState.h  NokiaFC.h  SystemApp.cpp  VibraCtrl.h  ngageapp.h
Stubs/Network/: BluetoothManager.cpp  BluetoothManager.h  MessageManager.cpp  MessageManager.h
Symbian/6.1/Series60/Epoc32/Data/: console.ini  epoc.ini
Symbian/6.1/Series60/Epoc32/Include/: 1000a442.rsg  activeapdb.h  activefavouritesdbnotifier.h  advgsmcs.h  agclient.h  agentclient.h  agmactiv.h  agmalarm.h  agmbasic.h  agmbasic.inl  agmcallb.h  agmcfilt.h  agmclust.h  agmclust.inl  agmcomon.h  agmcomon.inl  agmdate.h  agmdate.inl  agmentry.h  agmentry.inl  agmexcpt.h  agmexcpt.inl  agmextrc.h  agmfilts.h  agmfilts.inl  agmids.h  agmids.inl  agmiedit.h  agmiter.h  agmiter.inl  agmlists.h  agmlists.inl  agmmiter.h  agmmodel.h  agmmodel.inl  agmobsrv.h  agmpanic.h  agmrepli.h  agmrepli.inl  agmrptd.h  (+1249 more)
Symbian/6.1/Series60/Epoc32/Include/bafl/: backup_std.h
Symbian/6.1/Series60/Epoc32/Include/comms-infras/: nif_ver.h  nifagt.h  nifif.h  nifprvar.h
Symbian/6.1/Series60/Epoc32/Include/ecom/: registryinfo.rh
Symbian/6.1/Series60/Epoc32/Include/libc/: _ansi.h  assert.h  ctype.h  dirent.h  errno.h  fcntl.h  ieeefp.h  limits.h  locale.h  math.h  netdb.h  netdb_r.h  process.h  pwd.h  reent.h  setjmp.h  signal.h  stdarg.h  stdarg_e.h  stddef.h  stdio.h  stdio_r.h  stdlib.h  stdlib_r.h  string.h  time.h  unistd.h
Symbian/6.1/Series60/Epoc32/Include/networking/: in_hook.h  in_ip.h  in_ip.inl  in_std.h  in_tcp.h  in_tcp.inl  pppbase.h  pppbase.inl  pppccp.h  pppcfg.h  pppcomp.h  pppdef.h  ppplcp.h  ppplcp.inl  pppsock.h  pppsock.inl  vj.h  vjdecomp.inl  vjif.h
Symbian/6.1/Series60/Epoc32/Include/uikon/: eikalsrv.h  eikalsup.h  eiknfysv.h  eiksvfty.h
Symbian/6.1/Series60/Epoc32/Tools/: abld.pl  bldmake.pl
Symbian/6.1/Series60/Epoc32/Wins/c/: hello.wmlc
Symbian/6.1/Series60/Epoc32Ex/appframework/text/: bld.inf  txtexamp.cpp  txtexamp.h  txtglob.cpp  txtrich.cpp  txtshell.cpp  txtshell.h  txtshell.hrh  txtshell.mmp  txtshell.rss  txtstyl.cpp  txtview.cpp
Symbian/6.1/Series60/Epoc32Ex/base/commonframework/: commonframework.h  commonstreamstore.h  commontodbmsex.h  commontoresourcefilesex.h
Symbian/6.1/Series60/Epoc32Ex/base/resourcefiles/: commonfile.hrh
Symbian/6.1/Series60/Epoc32Ex/basics/cclasses/: bld.inf  cclasses.cpp  cclasses.mmp
Symbian/6.1/Series60/Epoc32Ex/basics/commonframework/: commonframework.h
Symbian/6.1/Series60/Epoc32Ex/basics/helloworld/: bld.inf  helloworld.cpp  helloworld.mmp
Symbian/6.1/Series60/Epoc32Ex/basics/mclasses1/: bld.inf  mclasses1.cpp  mclasses1.mmp
Symbian/6.1/Series60/Epoc32Ex/basics/mclasses2/: bld.inf  mclasses2.cpp  mclasses2.mmp
Symbian/6.1/Series60/Epoc32Ex/basics/mclasses3/: bld.inf  mclasses3.cpp  mclasses3.mmp
Symbian/6.1/Series60/Epoc32Ex/basics/staticdll/: bld.inf  createstaticdll.cpp  createstaticdll.h  createstaticdll.mmp  createstaticdllarm.def  createstaticdllwins.def  usestaticdll.cpp  usestaticdll.mmp
Symbian/6.1/Series60/Epoc32Ex/basics/tandrclasses/: bld.inf  tandrclasses.cpp  tandrclasses.mmp
Symbian/6.1/Series60/Epoc32Ex/graphics/: bld.inf  draw.cpp  graphicscontrol.cpp  graphicscontrol.h  graphicsshell.cpp  graphicsshell.h  graphicsshell.hrh  graphicsshell.mmp  graphicsshell.rss  zoom.cpp
Symbian/6.1/Series60/Epoc32Ex/graphics/bitmaps/: bitmap.cpp  bitmapsgraphicscontrol.cpp  bitmapsgraphicscontrol.h  bitmapsshell.cpp  bitmapsshell.h  bitmapsshell.hrh  bitmapsshell.mmp  bitmapsshell.rss  bld.inf  fontbitmapserver.cpp
Symbian/6.1/Series60/Epoc32Ex/graphics/commongraphicsexamplefiles/: commongraphicscontrolframework.h
Symbian/6.1/Series60/Epoc32Ex/graphics/embedding/: bld.inf  embeddinggraphicscontrol.cpp  embeddinggraphicscontrol.h  embeddingshell.cpp  embeddingshell.h  embeddingshell.hrh  embeddingshell.mmp  embeddingshell.rss  picture.cpp
Symbian/6.1/Series60/Epoc32Ex/graphics/fonts/: bld.inf  fonts.cpp  fontsgraphicscontrol.cpp  fontsgraphicscontrol.h  fontsshell.cpp  fontsshell.h  (+4 more)
Symbian/6.1/Series60/Epoc32Ex/helloworld/: bld.inf  helloworld.h  helloworld.hrh  helloworld.mmp  helloworld.rss  helloworld_application.cpp  helloworld_appui.cpp  helloworld_appview.cpp  helloworld_document.cpp  helloworld_main.cpp
Symbian/6.1/Series60/Epoc32Ex/toolsandutilities/: examplesreadme.txt  helloworld  helloworld.app  helloworld.cer  helloworld.doc  helloworld.key  helloworld.pkg  helloworld.rfr  helloworld.rit  helloworld.rsc  helloworldd  helloworldl.txt  helloworldlangs.pkg  helloworldoptions.pkg  helloworldreq.p10  helloworldsecure.pkg  helloworldsis.pkg  helloworldtext.pkg  sample.txt  sample2.txt  shapes.app  shapes.pkg  shapes.rsc
Symbian/6.1/Series60/Series60Doc/: examples.chm  series60apiref.chm  series60guides.chm  start.chm
Symbian/6.1/Series60/Series60Ex/helperfunctions/: bitmapmethods.cpp  bitmapmethods.h  eikonenvironment.cpp  eikonenvironment.h  logfile.cpp  logfile.h  logfile.pan
Symbian/6.1/Series60/Series60Tools/applicationwizard/: avkonappwiz.awx  avkonappwiz.hlp  wizard_installation.txt
Symbian/6.1/Series60/Series60Tools/epocswitch/: index.html  readme.txt  settings.ini
Symbian/6.1/Series60/Series60Tools/epoctoolbar/: index.html  readme.txt
Symbian/6.1/Series60/Series60Tools/mmpclick/: index.html  readme.txt
Symbian/6.1/Series60/Series60Tools/smsinbox/: readme.txt
Symbian/6.1/Shared/EPOC32/Tools/: aifbuilder.bat  aiftoolu.bat  alp2csh.bat  alp2csh.pl  biftool.bat  bldmake.bat  charconv.bat  charconv.pl  checkgcc.pm  cl_gcc.pm  cl_win.pm  cnvtool.bat  cnvtool.pl  commsdb_hw.cmd  commsdb_ras.cmd  complog.pl  core.cmd  cshlpcmp.bat  cshlpcmp.pl  cshlpcmp_gui.bat  defutl.pm  e32env.pm  e32plat.pm  e32tpver.pm  efreeze.bat  efreeze.pl  emkdir.pl  epoc.bat  epoc.pl  epocaif.pl  epocrc.bat  epocrc.pl  ermdir.pl  eshell.bat  eshell.pl  evalid.bat  evalid.pl  fixupsym.bat  fixupsym.pl  genbuild.bat  (+50 more)
cmake/: nokia-ngage-toolchain.cmake
lib/armi/urel/: vibractrl.lib
src/: vibractrl.h
src/System/: SystemApp.h
(+4395 files in other folders)
