cmake_minimum_required(VERSION 3.10)
set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/nokia-ngage-toolchain.cmake)

project(6r49 CXX)

set(SRC_DIR ${RIFTS_DIR}/Code/src)

set(UID1 0x10000079)
set(UID2 0x100039CE)
set(UID3 0x101FD3F2)

set(GCC_COMN_DEFS -D__SYMBIAN32__ -D__GCC32__ -D__EPOC32__ -D__MARM__ -D__MARM_ARMI__ -D__DLL__)
set(GCC_MODE_DEFS -DNDEBUG -D_UNICODE)
set(GCC_USER_DEFS -DUID1=${UID1} -DUID2=${UID2} -DUID3=${UID3})
set(GCC_DEFS      ${GCC_COMN_DEFS} ${GCC_MODE_DEFS} ${GCC_USER_DEFS})

set(6r49_sources
    "${SRC_DIR}/common.cpp"
    "${SRC_DIR}/./BuildVersion.cpp"
    "${SRC_DIR}/./common.cpp"
    "${SRC_DIR}/./memory.cpp"
#    "${SRC_DIR}/Ai/AIHelperClasses.cpp"
#    "${SRC_DIR}/Ai/AIHelpers.cpp"
#    "${SRC_DIR}/Ai/AIPath.cpp"
#    "${SRC_DIR}/Ai/CrazyAI.cpp"
#    "${SRC_DIR}/Ai/FearAI.cpp"
#    "${SRC_DIR}/Ai/IAIModule.cpp"
#    "${SRC_DIR}/Ai/IPlayableAI.cpp"
#    "${SRC_DIR}/Ai/NPCAI.cpp"
#    "${SRC_DIR}/Ai/NPCCombatAI.cpp"
#    "${SRC_DIR}/Ai/NPCCombatAITargeter.cpp"
#    "${SRC_DIR}/Ai/PCAI.cpp"
#    "${SRC_DIR}/Ai/PCCombatAI.cpp"
#    "${SRC_DIR}/Ai/PCCombatAISelectionState.cpp"
#    "${SRC_DIR}/Ai/PropAI.cpp"
#    "${SRC_DIR}/Ai/RemoteAI.cpp"
#    "${SRC_DIR}/Ai/RemoteCombatAI.cpp"
#    "${SRC_DIR}/Ai/ScriptCombatAI.cpp"
#    "${SRC_DIR}/Ai/WallAI.cpp"
#    "${SRC_DIR}/Data/DBObjects.cpp"
#    "${SRC_DIR}/Data/DataID.cpp"
#    "${SRC_DIR}/Data/DataList.cpp"
#    "${SRC_DIR}/Data/DatabaseManager.cpp"
#    "${SRC_DIR}/Data/ElementDataResource.cpp"
#    "${SRC_DIR}/Data/EntityDataNPC.cpp"
#    "${SRC_DIR}/Data/EntityDataPC.cpp"
#    "${SRC_DIR}/Data/EntityDataProp.cpp"
#    "${SRC_DIR}/Data/EntityDataResource.cpp"
#    "${SRC_DIR}/Data/IDataObject.cpp"
#    "${SRC_DIR}/Data/IElementData.cpp"
#    "${SRC_DIR}/Data/IElementDataItem.cpp"
#    "${SRC_DIR}/Data/IEntityData.cpp"
#    "${SRC_DIR}/Data/IEntityDataActor.cpp"
#    "${SRC_DIR}/Data/ImportParty.cpp"
#    "${SRC_DIR}/Data/InfoChunk.cpp"
#    "${SRC_DIR}/Data/InfoGroup.cpp"
#    "${SRC_DIR}/Data/LootManager.cpp"
#    "${SRC_DIR}/Data/MapData.cpp"
#    "${SRC_DIR}/Data/MapDataResource.cpp"
#    "${SRC_DIR}/Data/StatTracker.cpp"
#    "${SRC_DIR}/Data/StoreDataResource.cpp"
#    "${SRC_DIR}/Entities/BossEntity.cpp"
#    "${SRC_DIR}/Entities/CameraEntity.cpp"
#    "${SRC_DIR}/Fonts/FontDescriptor.cpp"
#    "${SRC_DIR}/Fonts/SpriteUnitString.cpp"
#    "${SRC_DIR}/Fonts/SpriteUnitString2.cpp"
#    "${SRC_DIR}/Fonts/TextFillBox.cpp"
#    "${SRC_DIR}/FrontEnd/2DWidget.cpp"
#    "${SRC_DIR}/FrontEnd/AttributeModCore.cpp"
#    "${SRC_DIR}/FrontEnd/ClassSelectionCore.cpp"
#    "${SRC_DIR}/FrontEnd/DialogueWidget.cpp"
#    "${SRC_DIR}/FrontEnd/EntityInfoBox.cpp"
#    "${SRC_DIR}/FrontEnd/FrontEndCore.cpp"
#    "${SRC_DIR}/FrontEnd/HUDManager.cpp"
#    "${SRC_DIR}/FrontEnd/ItemMenuWidget.cpp"
#    "${SRC_DIR}/FrontEnd/MenuWidget.cpp"
#    "${SRC_DIR}/FrontEnd/NameGenCore.cpp"
#    "${SRC_DIR}/FrontEnd/SkillSelectionCore.cpp"
#    "${SRC_DIR}/FrontEnd/SpellSelectionCore.cpp"
#    "${SRC_DIR}/Game/GameManager.cpp"
#    "${SRC_DIR}/Game/Actions/AOETileEffectAction.cpp"
#    "${SRC_DIR}/Game/Actions/Action.cpp"
#    "${SRC_DIR}/Game/Actions/AirRaidAction.cpp"
#    "${SRC_DIR}/Game/Actions/AnimationAction.cpp"
#    "${SRC_DIR}/Game/Actions/CameraAction.cpp"
#    "${SRC_DIR}/Game/Actions/CharacterAction.cpp"
#    "${SRC_DIR}/Game/Actions/CharacterTextAction.cpp"
#    "${SRC_DIR}/Game/Actions/CombatTriggerAction.cpp"
#    "${SRC_DIR}/Game/Actions/CutsceneAction.cpp"
#    "${SRC_DIR}/Game/Actions/DeathWordAction.cpp"
#    "${SRC_DIR}/Game/Actions/DialogueAction.cpp"
#    "${SRC_DIR}/Game/Actions/EnterDoorAction.cpp"
#    "${SRC_DIR}/Game/Actions/FaceTileAction.cpp"
#    "${SRC_DIR}/Game/Actions/FallAction.cpp"
#    "${SRC_DIR}/Game/Actions/FireQuakeAction.cpp"
#    "${SRC_DIR}/Game/Actions/FireSpongeAction.cpp"
#    "${SRC_DIR}/Game/Actions/FlyAction.cpp"
#    "${SRC_DIR}/Game/Actions/FrontEndAction.cpp"
#    "${SRC_DIR}/Game/Actions/FullScreenAnimationAction.cpp"
#    "${SRC_DIR}/Game/Actions/JumpAction.cpp"
#    "${SRC_DIR}/Game/Actions/JumpDownAction.cpp"
#    "${SRC_DIR}/Game/Actions/KnockbackAction.cpp"
#    "${SRC_DIR}/Game/Actions/KnockupAction.cpp"
#    "${SRC_DIR}/Game/Actions/MeteorStrikeAction.cpp"
#    "${SRC_DIR}/Game/Actions/MoveAction.cpp"
#    "${SRC_DIR}/Game/Actions/MoveEntityGraphicsAction.cpp"
#    "${SRC_DIR}/Game/Actions/ParticleAction.cpp"
#    "${SRC_DIR}/Game/Actions/PhoenixAction.cpp"
#    "${SRC_DIR}/Game/Actions/PlagueAction.cpp"
#    "${SRC_DIR}/Game/Actions/PlayAnimationAction.cpp"
#    "${SRC_DIR}/Game/Actions/PlayEffectAction.cpp"
#    "${SRC_DIR}/Game/Actions/PossessAction.cpp"
#    "${SRC_DIR}/Game/Actions/ProjectileAction.cpp"
#    "${SRC_DIR}/Game/Actions/ProjectileLaserAction.cpp"
#    "${SRC_DIR}/Game/Actions/ProjectileTailAction.cpp"
#    "${SRC_DIR}/Game/Actions/ShakeEntityAction.cpp"
#    "${SRC_DIR}/Game/Actions/SummonAction.cpp"
#    "${SRC_DIR}/Game/Actions/TelemechanicAction.cpp"
#    "${SRC_DIR}/Game/Actions/TidalWaveAction.cpp"
#    "${SRC_DIR}/Game/Actions/TophetAttackAction.cpp"
#    "${SRC_DIR}/Game/Actions/TophetKnockbackAction.cpp"
#    "${SRC_DIR}/Game/Actions/TornadoAction.cpp"
#    "${SRC_DIR}/Game/Actions/WorldColorAction.cpp"
#    "${SRC_DIR}/Game/CombatManager/CombatCallbacks.cpp"
#    "${SRC_DIR}/Game/CombatManager/CombatManager.cpp"
#    "${SRC_DIR}/Game/CombatManager/CombatManagerDamage.cpp"
#    "${SRC_DIR}/Game/CombatManager/CombatManagerImpl.cpp"
#    "${SRC_DIR}/Game/CombatManager/CombatManagerStrings.cpp"
#    "${SRC_DIR}/Game/CombatManager/ElementHelpers.cpp"
#    "${SRC_DIR}/Game/CombatManager/ElementReference.cpp"
#    "${SRC_DIR}/Game/Cores/AbilitiesMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/ArenaCharacterSelect.cpp"
#    "${SRC_DIR}/Game/Cores/ArenaCore.cpp"
#    "${SRC_DIR}/Game/Cores/ArenaGameCore.cpp"
#    "${SRC_DIR}/Game/Cores/ArenaGameLoader.cpp"
#    "${SRC_DIR}/Game/Cores/ArenaGameOptions.cpp"
#    "${SRC_DIR}/Game/Cores/ArenaGameSearch.cpp"
#    "${SRC_DIR}/Game/Cores/ArenaGameView.cpp"
#    "${SRC_DIR}/Game/Cores/ArenaMainMenu.cpp"
#    "${SRC_DIR}/Game/Cores/ArenaNameGenCore.cpp"
#    "${SRC_DIR}/Game/Cores/ArenaTurnCore.cpp"
#    "${SRC_DIR}/Game/Cores/BTGameMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/BTHostMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/BluetoothConnectionCore.cpp"
#    "${SRC_DIR}/Game/Cores/BluetoothCore.cpp"
#    "${SRC_DIR}/Game/Cores/BluetoothGameCore.cpp"
#    "${SRC_DIR}/Game/Cores/CheatEnablerCore.cpp"
#    "${SRC_DIR}/Game/Cores/ChopShopCore.cpp"
#    "${SRC_DIR}/Game/Cores/CityMapCore.cpp"
#    "${SRC_DIR}/Game/Cores/CoreManager.cpp"
#    "${SRC_DIR}/Game/Cores/CutsceneCore.cpp"
#    "${SRC_DIR}/Game/Cores/DeleteGameCore.cpp"
#    "${SRC_DIR}/Game/Cores/EquipmentMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/FeaturesCore.cpp"
#    "${SRC_DIR}/Game/Cores/GameCore.cpp"
#    "${SRC_DIR}/Game/Cores/GameFileCore.cpp"
#    "${SRC_DIR}/Game/Cores/ImageBrowserCore.cpp"
#    "${SRC_DIR}/Game/Cores/InnCore.cpp"
#    "${SRC_DIR}/Game/Cores/KeyMapMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/LimitedPauseMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/LoadGameCore.cpp"
#    "${SRC_DIR}/Game/Cores/MapCore.cpp"
#    "${SRC_DIR}/Game/Cores/MultiplayerGameCore.cpp"
#    "${SRC_DIR}/Game/Cores/OptionsMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/PartyMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/PauseMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/PickUpMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/QuestMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/ReconnectionCore.cpp"
#    "${SRC_DIR}/Game/Cores/RewardScreenCore.cpp"
#    "${SRC_DIR}/Game/Cores/SaveGameCore.cpp"
#    "${SRC_DIR}/Game/Cores/ServerActionCore.cpp"
#    "${SRC_DIR}/Game/Cores/SettingsMenuCore.cpp"
#    "${SRC_DIR}/Game/Cores/SinglePlayerGameCore.cpp"
#    "${SRC_DIR}/Game/Cores/SplashCore.cpp"
#    "${SRC_DIR}/Game/Cores/StoreCore.cpp"
#    "${SRC_DIR}/Game/Cores/UnlockablesCore.cpp"
#    "${SRC_DIR}/Game/PersistentEffects/IPersistentEffect.cpp"
#    "${SRC_DIR}/Game/PersistentEffects/PersistentControl.cpp"
#    "${SRC_DIR}/Game/PersistentEffects/PersistentCrazy.cpp"
#    "${SRC_DIR}/Game/PersistentEffects/PersistentHorror.cpp"
#    "${SRC_DIR}/Game/PersistentEffects/PersistentStats.cpp"
#    "${SRC_DIR}/Game/PersistentEffects/PersistentSummon.cpp"
#    "${SRC_DIR}/Game/PersistentEffects/PersistentTrigger.cpp"
#    "${SRC_DIR}/Game/Quests/Quest.cpp"
#    "${SRC_DIR}/Game/Quests/QuestControl.cpp"
#    "${SRC_DIR}/Game/Quests/Quests.cpp"
#    "${SRC_DIR}/Game/Sector/DynamicTile.cpp"
#    "${SRC_DIR}/Game/Sector/DynamicTileStrip.cpp"
#    "${SRC_DIR}/Game/Sector/LeyLineManager.cpp"
#    "${SRC_DIR}/Game/Sector/RangeMaker.cpp"
#    "${SRC_DIR}/Game/Sector/SectorData.cpp"
#    "${SRC_DIR}/Game/Sector/SectorListResource.cpp"
#    "${SRC_DIR}/Game/Sector/SectorModule.cpp"
#    "${SRC_DIR}/Game/Sector/SectorModuleLineOfSight.cpp"
#    "${SRC_DIR}/Game/Sector/SectorModuleMovement.cpp"
#    "${SRC_DIR}/Game/Sector/SectorRegion.cpp"
#    "${SRC_DIR}/Game/Sector/SectorResource.cpp"
#    "${SRC_DIR}/Game/Sector/AStar/PathFinder.cpp"
#    "${SRC_DIR}/Game/Sequencer/ActionOpCode.cpp"
#    "${SRC_DIR}/Game/Sequencer/CreateAction.cpp"
#    "${SRC_DIR}/Game/Sequencer/DebugLink.cpp"
#    "${SRC_DIR}/Game/Sequencer/DisAsm.cpp"
#    "${SRC_DIR}/Game/Sequencer/SequenceFunctions.cpp"
#    "${SRC_DIR}/Game/Sequencer/SequenceHelpers.cpp"
#    "${SRC_DIR}/Game/Sequencer/SequenceOpCodes.cpp"
#    "${SRC_DIR}/Game/Sequencer/SequenceResource.cpp"
#    "${SRC_DIR}/Game/Sequencer/Sequencer.cpp"
#    "${SRC_DIR}/Game/Sequencer/SequencerAction.cpp"
#    "${SRC_DIR}/Game/Triggers/CombatTrigger.cpp"
#    "${SRC_DIR}/Game/Triggers/StaticTrigger.cpp"
#    "${SRC_DIR}/Game/Triggers/TriggerScript.cpp"
#    "${SRC_DIR}/Input/CodeRecognizer.cpp"
#    "${SRC_DIR}/Input/IInputListener.cpp"
#    "${SRC_DIR}/Input/InputManager.cpp"
#    "${SRC_DIR}/Main/ActorEntity.cpp"
#    "${SRC_DIR}/Main/BBLog.cpp"
#    "${SRC_DIR}/Main/BBLogCommon.cpp"
#    "${SRC_DIR}/Main/CombatEntity.cpp"
#    "${SRC_DIR}/Main/GlobalSettings.cpp"
#    "${SRC_DIR}/Main/Globals.cpp"
#    "${SRC_DIR}/Main/HashedStringIndex.cpp"
#    "${SRC_DIR}/Main/IBaseCore.cpp"
#    "${SRC_DIR}/Main/IMainObject.cpp"
#    "${SRC_DIR}/Main/Inventory.cpp"
#    "${SRC_DIR}/Main/MainElement.cpp"
#    "${SRC_DIR}/Main/MainEntity.cpp"
#    "${SRC_DIR}/Main/PartyData.cpp"
#    "${SRC_DIR}/Main/PropEntity.cpp"
#    "${SRC_DIR}/Main/StarterCore.cpp"
#    "${SRC_DIR}/Main/Unlockables.cpp"
#    "${SRC_DIR}/Math/Basis.cpp"
#    "${SRC_DIR}/Math/Color.cpp"
#    "${SRC_DIR}/Math/Direction.cpp"
#    "${SRC_DIR}/Math/Fixed.cpp"
#    "${SRC_DIR}/Math/Formula.cpp"
#    "${SRC_DIR}/Math/LookupTable.cpp"
#    "${SRC_DIR}/Math/Matrix3.cpp"
#    "${SRC_DIR}/Math/Orientation.cpp"
#    "${SRC_DIR}/Math/Quaternion.cpp"
#    "${SRC_DIR}/Math/Randomizer.cpp"
#    "${SRC_DIR}/Network/ArenaManager.cpp"
#    "${SRC_DIR}/Network/ArenaManagerArena.cpp"
#    "${SRC_DIR}/Network/ArenaManagerStub.cpp"
#    "${SRC_DIR}/Network/BluetoothManager.cpp"
#    "${SRC_DIR}/Network/BluetoothPowerSwitch.cpp"
#    "${SRC_DIR}/Network/IServerAction.cpp"
#    "${SRC_DIR}/Network/Message.cpp"
#    "${SRC_DIR}/Network/MessageBase.cpp"
#    "${SRC_DIR}/Network/MessageManager.cpp"
#    "${SRC_DIR}/Network/SocketAPI.cpp"
#    "${SRC_DIR}/Network/Actions/AcceptChallengeAction.cpp"
#    "${SRC_DIR}/Network/Actions/ChallengeStatusAction.cpp"
#    "${SRC_DIR}/Network/Actions/CreateChallengeAction.cpp"
#    "${SRC_DIR}/Network/Actions/DownloadCharactersAction.cpp"
#    "${SRC_DIR}/Network/Actions/DownloadTurnsAction.cpp"
#    "${SRC_DIR}/Network/Actions/EndGameAction.cpp"
#    "${SRC_DIR}/Network/Actions/FindChallengeAction.cpp"
#    "${SRC_DIR}/Network/Actions/GameUpkeepAction.cpp"
#    "${SRC_DIR}/Network/Actions/NameValidationAction.cpp"
#    "${SRC_DIR}/Network/Actions/ServerConfigAction.cpp"
#    "${SRC_DIR}/Network/Actions/UpdateFriendsList.cpp"
#    "${SRC_DIR}/Network/Actions/UploadCharactersAction.cpp"
#    "${SRC_DIR}/Network/Actions/UploadTurnsAction.cpp"
#    "${SRC_DIR}/Raster/3dtypes.cpp"
#    "${SRC_DIR}/Raster/RenderContext.cpp"
#    "${SRC_DIR}/Render/3DModelModule.cpp"
#    "${SRC_DIR}/Render/AnimationModule.cpp"
#    "${SRC_DIR}/Render/AnimationResource.cpp"
#    "${SRC_DIR}/Render/AnimationSetResource.cpp"
#    "${SRC_DIR}/Render/Camera.cpp"
#    "${SRC_DIR}/Render/CustomModule.cpp"
#    "${SRC_DIR}/Render/DecalModule.cpp"
#    "${SRC_DIR}/Render/EmitterRule.cpp"
#    "${SRC_DIR}/Render/GraphicsModule.cpp"
#    "${SRC_DIR}/Render/ImageResource.cpp"
#    "${SRC_DIR}/Render/LineDrawing.cpp"
#    "${SRC_DIR}/Render/ModelResource.cpp"
#    "${SRC_DIR}/Render/PaletteFilterContainer.cpp"
#    "${SRC_DIR}/Render/PaletteResource.cpp"
#    "${SRC_DIR}/Render/ParticleEmitterModule.cpp"
#    "${SRC_DIR}/Render/ParticleModule.cpp"
#    "${SRC_DIR}/Render/ParticleModuleBlitting.cpp"
#    "${SRC_DIR}/Render/RenderEffects.cpp"
#    "${SRC_DIR}/Render/RenderManager.cpp"
#    "${SRC_DIR}/Render/SelectionModule.cpp"
#    "${SRC_DIR}/Render/TerrainModule.cpp"
#    "${SRC_DIR}/Render/TerrainResource.cpp"
#    "${SRC_DIR}/Render/TextureResource.cpp"
#    "${SRC_DIR}/Resource/IResource.cpp"
#    "${SRC_DIR}/Resource/ResourceList.cpp"
#    "${SRC_DIR}/Resource/ResourceManager.cpp"
#    "${SRC_DIR}/SnapStub/SnapPacket.cpp"
#    "${SRC_DIR}/Sound/CallMonitor.cpp"
#    "${SRC_DIR}/Sound/MusicStreamBuffer.cpp"
#    "${SRC_DIR}/Sound/SoundMonitor.cpp"
#    "${SRC_DIR}/Sound/SoundWrap.cpp"
#    "${SRC_DIR}/Sound/audiostreamplayer.cpp"
#    "${SRC_DIR}/Sound/simplemixer.cpp"
    "${SRC_DIR}/System/DFile.cpp"
    "${STUB_DIR}/SystemApp.cpp"
    "${SRC_DIR}/System/SystemAppUi.cpp"
    "${SRC_DIR}/System/SystemAppView.cpp"
    "${SRC_DIR}/System/SystemDocument.cpp"
    "${SRC_DIR}/System/TKMF.cpp"
#    "${SRC_DIR}/Utility/BB_String.cpp"
#    "${SRC_DIR}/Utility/BitVector.cpp"
#    "${SRC_DIR}/Utility/BlockEncryption.cpp"
#    "${SRC_DIR}/Utility/DebugRef.cpp"
#    "${SRC_DIR}/Utility/IWriteStream.cpp"
#    "${SRC_DIR}/Utility/PerfTimer.cpp"
#    "${SRC_DIR}/Utility/PulseManager.cpp"
#    "${SRC_DIR}/Utility/PulseUser.cpp"
#    "${SRC_DIR}/Utility/RandClass.cpp"
#    "${SRC_DIR}/Utility/ReadStream.cpp"
#    "${SRC_DIR}/Utility/ReadStreamFile.cpp"
#    "${SRC_DIR}/Utility/StateMachine.cpp"
#    "${SRC_DIR}/Utility/SymbianHelpers.cpp"
#    "${SRC_DIR}/Utility/Timer.cpp"
#    "${SRC_DIR}/Utility/WriteStreamFile.cpp"
#    "${SRC_DIR}/Utility/WriteStreamMemory.cpp"
#    "${SRC_DIR}/Utility/df_vsprintf.cpp"
    "${SRC_DIR}/Utility/zlib/adler32.cpp"
    "${SRC_DIR}/Utility/zlib/compress.cpp"
    "${SRC_DIR}/Utility/zlib/crc32.cpp"
    "${SRC_DIR}/Utility/zlib/deflate.cpp"
    "${SRC_DIR}/Utility/zlib/infblock.cpp"
    "${SRC_DIR}/Utility/zlib/infcodes.cpp"
    "${SRC_DIR}/Utility/zlib/inffast.cpp"
    "${SRC_DIR}/Utility/zlib/inflate.cpp"
    "${SRC_DIR}/Utility/zlib/inftrees.cpp"
    "${SRC_DIR}/Utility/zlib/infutil.cpp"
    "${SRC_DIR}/Utility/zlib/trees.cpp"
    "${SRC_DIR}/Utility/zlib/uncompr.cpp"
    "${SRC_DIR}/Utility/zlib/zutil.cpp")

add_library(${PROJECT_NAME} STATIC ${6r49_sources})
build_dll(${PROJECT_NAME} ${UID1} ${UID2} ${UID3})

target_compile_definitions(
    ${PROJECT_NAME}
    PUBLIC
    ${GCC_DEFS})

target_include_directories(
    ${PROJECT_NAME}
    PUBLIC
    ${SRC_DIR}
    ${SRC_DIR}/Main)
